objects/LoginAsWithUsers__c.object
<CustomObject>
    <fields>
        <fullName>CLIENT_IP__c</fullName>
        <label>CLIENT_IP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DELEGATED_USER_ID_DERIVED__c</fullName>
        <label>DELEGATED_USER_ID_DERIVED</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DELEGATED_USER_ID__c</fullName>
        <label>DELEGATED_USER_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DELEGATED_USER_NAME__c</fullName>
        <label>DELEGATED_USER_NAME</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EVENT_TYPE__c</fullName>
        <label>EVENT_TYPE</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGANIZATION_ID__c</fullName>
        <label>ORGANIZATION_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUEST_ID__c</fullName>
        <label>REQUEST_ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMESTAMP_DERIVED__c</fullName>
        <label>TIMESTAMP_DERIVED</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMESTAMP__c</fullName>
        <label>TIMESTAMP</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URI__c</fullName>
        <label>URI</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_ID_DERIVED__c</fullName>
        <label>USER_ID_DERIVED</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USER_ID__c</fullName>
        <label>USER_ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_IsActive__c</fullName>
        <label>User_IsActive</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User_Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Profile_Name__c</fullName>
        <label>User_Profile_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_User_Role_Name__c</fullName>
        <label>User_User_Role_Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Username__c</fullName>
        <label>User_Username</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Login As With Users</label>
    <nameField>
        <displayFormat>LAWU-{0000}</displayFormat>
        <label>Login As With Users ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Login As With Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>